--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -1,3 +1,14 @@
+
+.container {
+    position: relative;
+}
+
+.title {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 24.3px;
+}
+
 .btnIconUp {
     background-image: url('../../assets/icons/icon_arrowUp.svg');
     width: 12px;
@@ -6,8 +17,56 @@
     background-repeat: no-repeat;
     border: none;
     transform: rotate(180deg);
+    position: absolute;
+    top: 9px;
+    right: 7px;
 }
 
 .btnIconDown {
     transform: none;
+}
+
+.btnIconUp:hover {
+    filter: brightness(70%);
+    transition: .3s;
+}
+
+.checkbox {
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+    appearance: none;
+    border: 1px solid #959595;
+    border-radius: 3px;
+    -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: transparent;
+}
+
+// .checkbox::before {
+//   content: "";
+//   display: inline-block;
+//   width: 16px;
+//   height: 16px;
+//   border: none;
+//   visibility: hidden;
+//   color: black;
+//   background-color: black;
+// }
+
+.checkbox:checked {
+  visibility: visible;
+  background-color: #84D52C;
+  background-image: url('../../assets/icons/icon_checkbox.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+}
+
+.checkbox:hover {
+    filter: brightness(73%);
+}
+
+.checkbox:active {
+    box-shadow: 0px 4px 16px 6px rgba(132, 213, 44, 0.2);
 }
