--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,6 +6,7 @@
     background-image: url('./assets/icons/icon_bcgroundDropDown.svg');
     background-repeat: no-repeat;
     margin-left: 26px;
-    margin-top: 52px;
-    padding: 15px 22px 50px 17px;
+    margin-top: 1px;
+    padding: 0 22px 50px 17px;
+    background-position: left;
 }
