--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -1,25 +1,33 @@
 
 .container {
-    position: relative;
+    
+}
+
+
+.wrapTitleBtn {
+    display: flex;
+    justify-content: space-between;
 }
 
 .title {
     font-weight: 600;
     font-size: 18px;
     line-height: 24.3px;
+    margin-top: 15px;
 }
+
 
 .btnIconUp {
     background-image: url('../../assets/icons/icon_arrowUp.svg');
-    width: 12px;
-    height: 7px;
+    width: 14px;
+    height: 10px;
     background-color: transparent;
     background-repeat: no-repeat;
     border: none;
     transform: rotate(180deg);
-    position: absolute;
-    top: 9px;
-    right: 7px;
+    align-self: center;
+    margin-top: 9px;
+
 }
 
 .btnIconDown {
@@ -29,6 +37,20 @@
 .btnIconUp:hover {
     filter: brightness(70%);
     transition: .3s;
+}
+
+.wrapList {
+    margin-top: 12px;
+}
+
+.wrapCheckbox {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.wrapCheckbox:first-of-type {
+    margin: 0;
 }
 
 .checkbox {
@@ -41,18 +63,9 @@
     -webkit-appearance: none;
   -moz-appearance: none;
   background-color: transparent;
+  margin-right: 5px;
 }
 
-// .checkbox::before {
-//   content: "";
-//   display: inline-block;
-//   width: 16px;
-//   height: 16px;
-//   border: none;
-//   visibility: hidden;
-//   color: black;
-//   background-color: black;
-// }
 
 .checkbox:checked {
   visibility: visible;
@@ -69,4 +82,12 @@
 
 .checkbox:active {
     box-shadow: 0px 4px 16px 6px rgba(132, 213, 44, 0.2);
+}
+
+label {
+    color: #959595;
+}
+
+.checkbox:checked + label {
+    color: #FFFFFF;
 }
